--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -5,3 +5,12 @@ html {
 *::after,
 *::before {
   box-sizing: inherit; }
+
+html {
+  height: 100%; }
+
+body {
+  background-color: #440951;
+  background-image: -moz-radial-gradient(center 45deg, circle cover, #b032cb, #440951);
+  background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 800, from(#b032cb), to(#440951));
+  background-image: radial-gradient(center 45deg, circle cover, #b032cb, #440951); }
