--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -1,2 +1,14 @@
 @import '../../../bower_components/bourbon/app/assets/stylesheets/bourbon';
 @import '../../../bower_components/neat/app/assets/stylesheets/neat';
+
+
+html{
+  height:100%;
+}
+
+body{
+  background-color:#440951;
+  background-image: -moz-radial-gradient(center 45deg,circle cover, #b032cb, #440951);
+  background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%,800, from(#b032cb), to(#440951));
+  background-image: radial-gradient(center 45deg,circle cover, #b032cb, #440951);
+}
