--- a/assets/stylesheets/scss/main.scss
+++ b/assets/stylesheets/scss/main.scss
@@ -7,10 +7,8 @@ html {
 }
 
 body {
-  background-color:#440951;
-  background-image: -moz-radial-gradient(center 45deg,circle cover, #b032cb, #440951);
-  background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%,800, from(#b032cb), to(#440951));
-  background-image: radial-gradient(center 45deg,circle cover, #b032cb, #440951);
+  //background-color:#440951;
+  background-image: -webkit-gradient(radial, 50% 50%, 0, 50% 50%,800, from(#fff), to(#fff));
   height: 100%;
   position: relative;
 }
