--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -15,19 +15,22 @@ body {
   position: relative; }
 
 h1.clock {
-  width: 292px;
+  width: 270px;
   height: 74px;
   position: absolute;
   top: 50%;
   left: 50%;
   margin-top: -37px;
-  margin-left: -146px; }
+  margin-left: -135px; }
 
-h1.clock > span {
+h1.clock span {
   display: inline-block;
-  font-size: 2em;
-  font-family: "Righteous", sans-serif;
+  font-size: 1.6em;
+  font-family: "Nova Mono", sans-serif;
   color: #fff; }
 
-h1.clock > hr {
+h1.clock span:first-child {
+  margin-left: 3px; }
+
+h1.clock hr {
   width: 100%; }
