--- a/assets/stylesheets/css/main.css
+++ b/assets/stylesheets/css/main.css
@@ -14,7 +14,7 @@ body {
   height: 100%;
   position: relative; }
 
-h1.clock {
+section.clock {
   width: 270px;
   height: 74px;
   position: absolute;
@@ -23,14 +23,25 @@ h1.clock {
   margin-top: -37px;
   margin-left: -135px; }
 
-h1.clock span {
+.clock .hex-color {
+  display: none; }
+
+.clock:hover .hex-color {
+  display: inline-block; }
+
+.clock:hover .time {
+  display: none; }
+
+.time span,
+.hex-color span {
   display: inline-block;
-  font-size: 1.6em;
+  font-size: 2.6em;
   font-family: "Nova Mono", sans-serif;
   color: #fff; }
 
-h1.clock span:first-child {
-  margin-left: 2px; }
+.time span:first-child,
+.hex-color span:first-child {
+  margin-left: 32px; }
 
-h1.clock hr {
+.time hr {
   width: 100%; }
